--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.1.0",
     "@testing-library/user-event": "13.2.1",
+    "express-redis-cache": "^1.1.3",
     "nodemon": "^2.0.12",
+    "raygun-apm": "^1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.3"
+    "react-image-lightbox": "^5.1.4",
+    "react-lazyload": "^3.2.0",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1"
   },
   "proxy": "http://localhost:5000/",
   "scripts": {
@@ -17,7 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "nodemon server.js --watch server.js --watch src/images.json"
+    "serve": "nodemon server.js --watch server.js --watch src/images.json",
+    "serveWithRaygun": "with-raygun-apm nodemon server.js --watch server.js --watch src/images.json"
   },
   "eslintConfig": {
     "extends": "react-app"
